--- a/templates/page.guide.liquid
+++ b/templates/page.guide.liquid
@@ -215,11 +215,11 @@
             {% comment %} #########　if文（page.title = page.link） {% endcomment %}
               {% comment %} ######## case文（アイコンを変える） {% endcomment %}
               {% case link.title %}
-                {% when 'ご注文について' %}<a href="{{ link.url }}"><img src="#">{{ link.title }}</a></li>
-                {% when 'お届けについて' %}<a href="{{ link.url }}"><img src="#">{{ link.title }}</a></li>
-                {% when 'お支払いについて' %}<a href="{{ link.url }}"><img src="#">{{ link.title }}</a></li>
-                {% when 'サービスについて' %}<a href="{{ link.url }}"><img src="#">{{ link.title }}</a></li>
-                {% when '返品・キャンセルについて' %}<a href="{{ link.url }}"><img src="#">{{ link.title }}</a></li>
+                {% when 'ご注文について' %}<a href="{{ link.url }}"><img src="#"><p>{{ link.title }}</p></a></li>
+                {% when 'お届けについて' %}<a href="{{ link.url }}"><img src="#"><p>{{ link.title }}</p></a></li>
+                {% when 'お支払いについて' %}<a href="{{ link.url }}"><img src="#"><p>{{ link.title }}</p></a></li>
+                {% when 'サービスについて' %}<a href="{{ link.url }}"><img src="#"><p>{{ link.title }}</p></a></li>
+                {% when '返品・キャンセルについて' %}<a href="{{ link.url }}"><img src="#"><p>{{ link.title }}</p></a></li>
               {% endcase %}
               {% comment %} ######## case文（アイコンを変える） {% endcomment %}
           {% endfor %}
@@ -231,15 +231,15 @@
           <div class="section-header">
             {% case page.title %}
               {% when 'ご注文について' %}
-                <h2 class="guide-page-title"><img src="#">{{ page.title }}</h2>
+                <h2 class="guide-page-title"><img src="#"><p>{{ page.title }}</p></h2>
               {% when 'お届けについて' %}
-                <h2 class="guide-page-title"><img src="#">{{ page.title }}</h2>
+                <h2 class="guide-page-title"><img src="#"><p>{{ page.title }}</p></h2>
               {% when 'お支払いについて' %}
-                <h2 class="guide-page-title"><img src="#">{{ page.title }}</h2>
+                <h2 class="guide-page-title"><img src="#"><p>{{ page.title }}</p></h2>
               {% when 'サービスについて' %}
-                <h2 class="guide-page-title"><img src="#">{{ page.title }}</h2>
+                <h2 class="guide-page-title"><img src="#"><p>{{ page.title }}</p></h2>
               {% when '返品・キャンセルについて' %}
-                <h2 class="guide-page-title"><img src="#">{{ page.title }}</h2>
+                <h2 class="guide-page-title"><img src="#"><p>{{ page.title }}</p></h2>
             {% endcase %}
             <h4>配送方法・運送会社</h4>
             <p>佐川急便・その他弊社指定運送会社</p>
@@ -331,7 +331,7 @@
           font-weight: bold;
           background: black;
           color: white;
-          margin-bottom: 50px;
+          margin: 50px  0;
         }
         .guide-contents {
           display: flex;
@@ -344,12 +344,17 @@
         .guide-menu {
         }
         .guide-menu li {
+          display:flex;
           line-height: 3em;
-          font-size: 0.8em;
+          font-size: 0.9em;
+          font-weight: bold;
           border-bottom: 1px solid black;
         }
+        .guide-menu li a {
+          display:flex;
+        }
         .guide-menu li img {
-          margin:0 20px;
+          margin:auto 10px;
         }
         .guide-menu li:last-child {
           line-height: 3em;
@@ -370,14 +375,23 @@
         }
         .guide-page-title {
           font-size: 1.5em;
+          font-weight: bold;
           line-height: 2em;
           text-align: left;
           display: block;
           border-bottom: 1px solid black;
-          margin-bottom: 50px;
+          margin-bottom: 20px;
+          display:flex;
         }
         .guide-page-title img {
-          margin-right: 20px;
+          margin: auto 10px;
+        }
+        .section-header h4 {
+          font-weight: bold;
+          line-height: 3em;
+        }
+        .sub-title {
+          font-weight: bold;
         }
         .guide-content {
           margin-bottom: 60px;
@@ -385,19 +399,28 @@
         .guide-content span {
           display: block;
           font-size: 0.8em;
+          line-height:2em;
+        }
+        .guide-content p {
+          line-height:2em;
         }
         table {
           width: 100%;
+          margin-bottom: 30px;
         }
         table th {
-          width: 200px;
+          width: 250px;
         }
         table th,table td {
-          line-height: 1.5em;
-          padding-left: 0;
-          border: 1px solid black;
+          line-height: 2em;
+          padding: 10px 0;
+          border: 1px dotted black;
           border-right: none;
           border-left: none;
+          vertical-align: middle;
+        }
+        table small{
+          font-size: 0.7em;
         }
       }
       @media screen and (max-width: 749px) {
@@ -407,7 +430,7 @@
           font-weight: bold;
           background: black;
           color: white;
-          margin-bottom: 50px;
+          margin: 50px 0;
         }
         .guide-menu {
           display: flex;
@@ -423,44 +446,63 @@
           height: 50px;
           margin-bottom: 20px;
         }
+        .guide-menu li a {
+          display:flex;
+          width: 100%;
+    /*       justify-content: space-around; */
+          align-items: center;
+        }
+        .guide-menu li p{
+          font-size: 0.8em;
+        }
         .current-page {
           background: black;
         }
-        .current-page a {
+        .current-page a p {
           color: white!important;
         }
         .guide-menu li span {
           display:none;
         }
-        .guide-menu li img {
-          height: 50px;
-        }
-        .guide-menu li:last-child {
-          margin-bottom: 50px;
-        }
-        .guide-page-title {
+          .guide-menu li img {
+            margin:auto 10px;
+          }
+          .guide-menu li:last-child {
+            margin-bottom: 50px;
+          }
+          .guide-page-title {
           font-size: 1.5em;
           line-height: 2em;
           display: block;
           border-bottom: 1px solid black;
           margin-bottom: 30px;
+          display:flex;
         }
         .guide-page-title img {
-          margin-right: 20px;
+          margin: auto 10px;
+        }
+        .section-header h4 {
+          font-weight: bold;
+          line-height: 3em;
         }
         .guide-content {
-          margin-bottom: 30px;
+          margin-bottom: 60px;
         }
         .sub-title {
           margin-bottom: 10px!important;
           padding-bottom: 10px;
           border-bottom: 1px dotted black;
+          font-weight: bold;
+        }
+        table {
+          margin-bottom: 20px;
         }
         table th,table td {
           display: block;
           width: 100%;
+          padding: 10px 0;
           line-height: 1.5em;
-          padding-left: 0;
+          font-size: 0.9em;
           border: 1px solid black;
           border: none;
         }
@@ -469,6 +511,11 @@
         }
         .guide-content span {
           font-size: 0.7em;
+          line-height:2em;
+        }
+        .guide-content p {
+          font-size: 0.9em;
+          line-height:1.5em;
         }
         .sub-title:last-child{
           border-bottom: none!important;
