--- a/templates/page.minimalist.liquid
+++ b/templates/page.minimalist.liquid
@@ -38,7 +38,7 @@
     <div class="fourth-section-contents">
       <h2>テキストテキストテキストテキストテキストテキストテキスト</h2>
       <div>
-        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
         <a href="#">VIEW MORE</a>
       </div>
     </div>
