--- a/templates/page.minimalist.liquid
+++ b/templates/page.minimalist.liquid
@@ -160,7 +160,7 @@
   @media screen and (max-width: 749px) {
     .minimalist-header {
       background-color: lightgray;
-      margin-bottom: 100px;
+      margin-bottom: 70px;
       height: 300px;
     }
     .minimalist-header img{
@@ -246,9 +246,11 @@
     }
     .fourth-section-contents h2 {
       display: block;
-      margin-top: 40px;
+      margin: 40px auto;
       width: 100%;
       line-height: 1.5em;
+      font-size: 1.5em;
+      font-weight:bold;
     }
     .fourth-section-contents div {
       width: 100%;
@@ -262,6 +264,7 @@
       width: 90%;
       line-height: 3em;
       text-align: center;
+      font-weight:bold;
     }
     .fourth-section-contents a:hover {
       transition: 0.5s;
