--- a/templates/page.form.liquid
+++ b/templates/page.form.liquid
@@ -22,6 +22,15 @@
               <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}">
             </div>
             <div class="grid__item medium-up--one-half">
+              <label for="{{ formId }}-name-furigana">フリガナ</label>
+              <input type="text" id="{{ formId }}-name-furigana" name="contact[{{ 'contact.form.name' | t }}]" value="">
+            </div>
+            <div class="grid__item medium-up--one-half">
+              <label for="{{ formId }}-company-name">会社名</label>
+              <input type="text" id="{{ formId }}-company-name" name="contact[{{ 'contact.form.name' | t }}]" value="">
+            </div>
+
+            <div class="grid__item medium-up--one-half">
               <label for="{{ formId }}-email">{{ 'contact.form.email' | t }} <span aria-hidden="true">*</span></label>
               <input
                 type="email"
