--- a/templates/page.form.liquid
+++ b/templates/page.form.liquid
@@ -18,13 +18,24 @@
 
           <div class="grid grid--half-gutters">
             <div class="grid__item medium-up--one-half">
+              <label for="ContactForm-contac-type">Choose a flavor</label>
+              <select id="ContactForm-contac-type" name="contact[Flavor]">
+                <option>サンプル１</option>
+                <option>サンプル２</option>
+                <option>サンプル３</option>
+              </select>
+            </div>
+
+            <div class="grid__item medium-up--one-half">
               <label for="{{ formId }}-name">{{ 'contact.form.name' | t }}</label>
               <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}">
             </div>
+
             <div class="grid__item medium-up--one-half">
               <label for="{{ formId }}-name-furigana">フリガナ</label>
               <input type="text" id="{{ formId }}-name-furigana" name="contact[{{ 'contact.form.name' | t }}]" value="">
             </div>
+
             <div class="grid__item medium-up--one-half">
               <label for="{{ formId }}-company-name">会社名</label>
               <input type="text" id="{{ formId }}-company-name" name="contact[{{ 'contact.form.name' | t }}]" value="">
