--- a/templates/page.form.liquid
+++ b/templates/page.form.liquid
@@ -16,56 +16,44 @@
         {% form 'contact', id: formId %}
           {% include 'form-status', form: form, form_id: formId %}
 
-          <div class="grid grid--half-gutters">
-            <div class="grid__item medium-up--one-half">
-              <label for="ContactForm-contac-type">Choose a flavor</label>
-              <select id="ContactForm-contac-type" name="contact[Flavor]">
-                <option>サンプル１</option>
-                <option>サンプル２</option>
-                <option>サンプル３</option>
-              </select>
-            </div>
+          <label for="ContactForm-contac-type">お問い合わせ種別</label>
+          <select id="ContactForm-contac-type" name="contact[お問い合わせ種別]">
+            <option>サンプル１</option>
+            <option>サンプル２</option>
+            <option>サンプル３</option>
+          </select>
 
-            <div class="grid__item medium-up--one-half">
-              <label for="{{ formId }}-name">{{ 'contact.form.name' | t }}</label>
-              <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}">
-            </div>
+          <label for="{{ formId }}-name">{{ 'contact.form.name' | t }}</label>
+          <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}">
 
-            <div class="grid__item medium-up--one-half">
-              <label for="{{ formId }}-name-furigana">フリガナ</label>
-              <input type="text" id="{{ formId }}-name-furigana" name="contact[{{ 'contact.form.name' | t }}]" value="">
-            </div>
+          <label for="{{ formId }}-name-furigana">フリガナ</label>
+          <input type="text" id="{{ formId }}-name-furigana" name="contact[フリガナ]" value="">
 
-            <div class="grid__item medium-up--one-half">
-              <label for="{{ formId }}-company-name">会社名</label>
-              <input type="text" id="{{ formId }}-company-name" name="contact[{{ 'contact.form.name' | t }}]" value="">
-            </div>
+          <label for="{{ formId }}-company-name">会社名</label>
+          <input type="text" id="{{ formId }}-company-name" name="contact[会社名]" value="">
 
-            <div class="grid__item medium-up--one-half">
-              <label for="{{ formId }}-email">{{ 'contact.form.email' | t }} <span aria-hidden="true">*</span></label>
-              <input
-                type="email"
-                id="{{ formId }}-email"
-                name="contact[email]"
-                autocorrect="off"
-                autocapitalize="off"
-                value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
-                aria-required="true"
-                {%- if form.errors contains 'email' -%}
-                  class="input--error"
-                  aria-invalid="true"
-                  aria-describedby="{{ formId }}-email-error"
-                {%- endif -%}
-                >
-              {%- if form.errors contains 'email' -%}
-                <span id="{{ formId}}-email-error" class="input-error-message">
-                  <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
-                  {% include 'icon-error' %}
-                  <span>{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
-                </span>
-              {%- endif -%}
-            </div>
-          </div>
+          <label for="{{ formId }}-email">メールアドレス<span aria-hidden="true">*</span></label>
+          <input
+            type="email"
+            id="{{ formId }}-email"
+            name="contact[email]"
+            autocorrect="off"
+            autocapitalize="off"
+            value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
+            aria-required="true"
+            {%- if form.errors contains 'email' -%}
+              class="input--error"
+              aria-invalid="true"
+              aria-describedby="{{ formId }}-email-error"
+            {%- endif -%}
+            >
+          {%- if form.errors contains 'email' -%}
+            <span id="{{ formId}}-email-error" class="input-error-message">
+              <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
+              {% include 'icon-error' %}
+              <span>{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
+            </span>
+          {%- endif -%}
 
           <label for="{{ formId }}-phone">{{ 'contact.form.phone' | t }}</label>
           <input type="tel" id="{{ formId }}-phone" name="contact[{{ 'contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form[phone] %}{{ form[phone] }}{% elsif customer %}{{ customer.phone }}{% endif %}">
