--- a/templates/page.form.liquid
+++ b/templates/page.form.liquid
@@ -24,13 +24,13 @@
           </select>
 
           <label for="{{ formId }}-name">{{ 'contact.form.name' | t }}</label>
-          <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}">
+          <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="仕事　太郎">
 
           <label for="{{ formId }}-name-furigana">フリガナ</label>
-          <input type="text" id="{{ formId }}-name-furigana" name="contact[フリガナ]" value="">
+          <input type="text" id="{{ formId }}-name-furigana" name="contact[フリガナ]" value="" placeholder="シゴト　タロウ">
 
           <label for="{{ formId }}-company-name">会社名</label>
-          <input type="text" id="{{ formId }}-company-name" name="contact[会社名]" value="">
+          <input type="text" id="{{ formId }}-company-name" name="contact[会社名]" value="" placeholder="ワアク株式会社">
 
           <label for="{{ formId }}-email">メールアドレス<span aria-hidden="true">*</span></label>
           <input
@@ -41,6 +41,7 @@
             autocapitalize="off"
             value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
             aria-required="true"
+            placeholder="sample@waak.space"
             {%- if form.errors contains 'email' -%}
               class="input--error"
               aria-invalid="true"
@@ -59,7 +60,7 @@
           <input type="tel" id="{{ formId }}-phone" name="contact[{{ 'contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form[phone] %}{{ form[phone] }}{% elsif customer %}{{ customer.phone }}{% endif %}">
 
           <label for="{{ formId }}-message">{{ 'contact.form.message' | t }}</label>
-          <textarea rows="10" id="{{ formId }}-message" name="contact[{{ 'contact.form.message' | t }}]">{% if form.body %}{{ form.body }}{% endif %}</textarea>
+          <textarea rows="10" id="{{ formId }}-message" name="contact[{{ 'contact.form.message' | t }}]" placeholder="お問合せ内容をご入力ください。">{% if form.body %}{{ form.body }}{% endif %}</textarea>
 
           <input type="submit" class="btn" value="{{ 'contact.form.submit' | t }}">
 
