--- a/templates/page.minimalist.liquid
+++ b/templates/page.minimalist.liquid
@@ -26,6 +26,7 @@
   </div>
 
   <div class="third-section">
+  {% section 'collection-template' %}
     <div class="third-section-content">collection</div>
     <div class="third-section-content">collection</div>
     <div class="third-section-content">collection</div>
