--- a/templates/page.form.liquid
+++ b/templates/page.form.liquid
@@ -1,71 +1,83 @@
 <div class="page-width">
   <div class="grid">
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
-      <div class="section-header text-center">
-        <h1>{{ page.title }}</h1>
-      </div>
 
-      {% if page.content.size > 0 %}
-        <div class="rte">
-          {{ page.content }}
+      {% if form.posted_successfully? %}
+
+          Comment posted successfully!
+          
+      {% else %}
+
+        <div class="section-header text-center">
+          <h1>{{ page.title }}</h1>
         </div>
-      {% endif %}
 
-      <div class="contact-form form-vertical">
-        {%- assign formId = 'ContactForm' -%}
-        {% form 'contact', id: formId %}
-          {% include 'form-status', form: form, form_id: formId %}
+        {% if page.content.size > 0 %}
+          <div class="rte">
+            {{ page.content }}
+          </div>
+        {% endif %}
 
-          <label for="ContactForm-contac-type">お問い合わせ種別</label>
-          <select id="ContactForm-contac-type" name="contact[お問い合わせ種別]">
-            <option>サンプル１</option>
-            <option>サンプル２</option>
-            <option>サンプル３</option>
-          </select>
+        <div class="contact-form form-vertical">
+          {%- assign formId = 'ContactForm' -%}
+          {% form 'contact', id: formId %}
 
-          <label for="{{ formId }}-name">{{ 'contact.form.name' | t }}</label>
-          <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="仕事　太郎">
+          {{ form.errors | default_errors }}
 
-          <label for="{{ formId }}-name-furigana">フリガナ</label>
-          <input type="text" id="{{ formId }}-name-furigana" name="contact[フリガナ]" value="" placeholder="シゴト　タロウ">
+            {% include 'form-status', form: form, form_id: formId %}
 
-          <label for="{{ formId }}-company-name">会社名</label>
-          <input type="text" id="{{ formId }}-company-name" name="contact[会社名]" value="" placeholder="ワアク株式会社">
+            <label for="ContactForm-contac-type">お問い合わせ種別</label>
+            <select id="ContactForm-contac-type" name="contact[お問い合わせ種別]">
+              <option>サンプル１</option>
+              <option>サンプル２</option>
+              <option>サンプル３</option>
+            </select>
 
-          <label for="{{ formId }}-email">メールアドレス<span aria-hidden="true">*</span></label>
-          <input
-            type="email"
-            id="{{ formId }}-email"
-            name="contact[email]"
-            autocorrect="off"
-            autocapitalize="off"
-            value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
-            aria-required="true"
-            placeholder="sample@waak.space"
+            <label for="{{ formId }}-name">{{ 'contact.form.name' | t }}</label>
+            <input type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="仕事　太郎">
+
+            <label for="{{ formId }}-name-furigana">フリガナ</label>
+            <input type="text" id="{{ formId }}-name-furigana" name="contact[フリガナ]" value="" placeholder="シゴト　タロウ">
+
+            <label for="{{ formId }}-company-name">会社名</label>
+            <input type="text" id="{{ formId }}-company-name" name="contact[会社名]" value="" placeholder="ワアク株式会社">
+
+            <label for="{{ formId }}-email">メールアドレス<span aria-hidden="true">*</span></label>
+            <input
+              type="email"
+              id="{{ formId }}-email"
+              name="contact[email]"
+              autocorrect="off"
+              autocapitalize="off"
+              value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
+              aria-required="true"
+              placeholder="sample@waak.space"
+              {%- if form.errors contains 'email' -%}
+                class="input--error"
+                aria-invalid="true"
+                aria-describedby="{{ formId }}-email-error"
+              {%- endif -%}
+              >
             {%- if form.errors contains 'email' -%}
-              class="input--error"
-              aria-invalid="true"
-              aria-describedby="{{ formId }}-email-error"
+              <span id="{{ formId}}-email-error" class="input-error-message">
+                <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
+                {% include 'icon-error' %}
+                <span>{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
+              </span>
             {%- endif -%}
-            >
-          {%- if form.errors contains 'email' -%}
-            <span id="{{ formId}}-email-error" class="input-error-message">
-              <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
-              {% include 'icon-error' %}
-              <span>{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
-            </span>
-          {%- endif -%}
 
-          <label for="{{ formId }}-phone">{{ 'contact.form.phone' | t }}</label>
-          <input type="tel" id="{{ formId }}-phone" name="contact[{{ 'contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form[phone] %}{{ form[phone] }}{% elsif customer %}{{ customer.phone }}{% endif %}">
+            <label for="{{ formId }}-phone">{{ 'contact.form.phone' | t }}</label>
+            <input type="tel" id="{{ formId }}-phone" name="contact[{{ 'contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form[phone] %}{{ form[phone] }}{% elsif customer %}{{ customer.phone }}{% endif %}">
 
-          <label for="{{ formId }}-message">{{ 'contact.form.message' | t }}</label>
-          <textarea rows="10" id="{{ formId }}-message" name="contact[{{ 'contact.form.message' | t }}]" placeholder="お問合せ内容をご入力ください。">{% if form.body %}{{ form.body }}{% endif %}</textarea>
+            <label for="{{ formId }}-message">{{ 'contact.form.message' | t }}</label>
+            <textarea rows="10" id="{{ formId }}-message" name="contact[{{ 'contact.form.message' | t }}]" placeholder="お問合せ内容をご入力ください。">{% if form.body %}{{ form.body }}{% endif %}</textarea>
 
-          <input type="submit" class="btn" value="{{ 'contact.form.submit' | t }}">
+            <input type="submit" class="btn" value="{{ 'contact.form.submit' | t }}">
 
-        {% endform %}
-      </div>
+          {% endform %}
+        </div>
+
+      {% endif %}
     </div>
   </div>
 </div>
